# ggmcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  DOCUMENTATION.md  Dockerfile  MULTI_ACCOUNT_SUPPORT.md  Makefile  PUBLISHING.md  README.md  cursor_rules.md  mise.toml  pyproject.toml  renovate.json  server.json
.claude/: CLAUDE.md  settings.json
.claude/skills/docker-image-tags/: SKILL.md
.claude/skills/use-settings-not-environ/: SKILL.md
.cursor/rules/: mcp_tools.md  no_uvicorn.md  use_pyproject_toml.md
.github/workflows/: build_docker.yml  ci.yml  docker-build-push.yml  nightly_docker_rebuild.yml  publish.yml  release.yml  test.yml
docs/: HIL_PLAN.md
helm/mcp-server/: .helmignore  CONTRIBUTING.md  Chart.yaml  DOCKER.md  INSTALL.md  README.md  values.yaml
helm/mcp-server/examples/: values-production.yaml  values-secops.yaml
helm/mcp-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
helm/mcp-server/tests/: deployment_test.yaml  hpa_test.yaml  ingress_test.yaml  service_test.yaml  serviceaccount_test.yaml  simple_test.yaml
scripts/: call_mcp_http_server.py  run_http_server.py  run_oauth_flow.py  run_tool.py  test_workspace_setup.py  update-cassettes-and-open-pr.sh
src/gg_api_mcp_server/: client.py  mcp_server.py  oauth.py  server.py  tools.py  utils.py
tests/: conftest.py  test_client.py  test_get_client_safeguards.py  test_gitguardian_client.py  test_host.py  test_logging_config.py  test_mcp_server.py  test_middleware_preprocessing.py  test_multi_account.py  test_oauth_config_validation.py  test_oauth_helpers.py  test_oauth_proxy_middleware.py  test_parse_repo_url.py  test_sanitization.py  test_schema_compression.py  test_scope_filtering.py  test_scopes_effective.py  test_secops_server_hil_smoke.py  test_server.py  test_server_profiles.py  test_tool_logging_middleware.py  test_tools.py
tests/cassettes/: README.md  test_get_audit_logs.yaml  test_get_audit_logs_with_limit.yaml  test_get_current_member.yaml  test_get_current_token_info.yaml  test_get_custom_tag.yaml  test_get_honeytoken.yaml  test_get_honeytoken_without_token.yaml  test_get_incident.yaml  test_get_incidents_batch.yaml  test_get_member_by_id.yaml  test_get_source_by_name.yaml  test_get_source_by_name_no_match.yaml  test_get_source_by_name_return_all_on_no_match.yaml  test_list_api_tokens.yaml  test_list_custom_tags.yaml  test_list_honeytokens_basic.yaml  test_list_honeytokens_get_all.yaml  test_list_honeytokens_show_token.yaml  test_list_honeytokens_with_ordering.yaml  test_list_honeytokens_with_search.yaml  test_list_incident_members.yaml  test_list_incident_notes.yaml  test_list_incidents_basic.yaml  test_list_incidents_coerce_multiple_single_values.yaml  test_list_incidents_coerce_single_severity.yaml  test_list_incidents_coerce_single_status.yaml  test_list_incidents_coerce_single_validity.yaml  test_list_incidents_for_mcp_basic.yaml  test_list_incidents_for_mcp_combined_filters.yaml  test_list_incidents_for_mcp_pagination.yaml  test_list_incidents_for_mcp_unassigned.yaml  test_list_incidents_for_mcp_with_date_filter.yaml  test_list_incidents_for_mcp_with_detector_category.yaml  test_list_incidents_for_mcp_with_detector_filter.yaml  test_list_incidents_for_mcp_with_feedback.yaml  test_list_incidents_for_mcp_with_issue_tracker.yaml  test_list_incidents_for_mcp_with_ordering.yaml  test_list_incidents_for_mcp_with_presence_filter.yaml  test_list_incidents_for_mcp_with_publicly_shared.yaml  (+29 more)
tests/cassettes/client/vcr/: test_assign_public_incident_by_email.yaml  test_assign_public_incident_by_member_id.yaml  test_assign_public_incident_send_email_false.yaml  test_count_incidents_for_mcp_basic.yaml  test_count_incidents_for_mcp_with_combined_filters.yaml  test_count_incidents_for_mcp_with_date_filter.yaml  test_count_incidents_for_mcp_with_search.yaml  test_count_incidents_for_mcp_with_severity_filter.yaml  test_count_incidents_for_mcp_with_status_filter.yaml  test_create_and_update_incident_note.yaml  test_create_and_update_public_incident_note.yaml  (+104 more)
tests/client/vcr/: test_activity_logs.py  test_count_incidents.py  test_custom_tags.py  test_honeytokens.py  test_incident_notes.py  test_incidents.py  test_occurrences.py  test_public_incidents.py  test_public_occurrences.py  test_sources.py  test_token.py
tests/prompts/: test_prompts.py
tests/tools/: test_activity_logs.py  test_assign_incident.py  test_assign_public_incident.py  test_count_incidents.py  test_create_code_fix_request.py  test_find_current_source_id.py  test_generate_honey_tokens.py  test_get_incident.py  test_get_member.py  test_get_public_incident.py  test_incident_notes.py  test_list_detectors.py  test_list_honey_tokens.py  test_list_incident_members.py  test_list_incident_teams.py  test_list_incidents.py  test_list_public_incidents.py  test_list_public_occurrences.py  test_list_remediation_targets.py  test_list_repo_incidents.py  test_list_repo_occurrences.py  test_list_sources.py  test_manage_incident.py  test_remediate_secret_incidents.py  test_scan_secrets.py  test_update_public_incident_status.py  test_write_custom_tags.py
tests/tools/github/: test_get_github_repo_metadata.py  test_list_github_repo_contributors.py  test_search_github_code.py  test_search_github_issues.py
tests/tools/network/: test_check_host_reachability.py  test_check_ssl_certificate.py  test_dns_lookup.py  test_rdap_domain_lookup.py  test_rdap_ip_lookup.py  test_reverse_dns_lookup.py
tests/tools/vcr/: test_count_incidents.py  test_get_incident.py  test_get_member.py  test_get_public_incident.py  test_get_remediation_workflow.py  test_list_detectors.py  test_list_honeytokens.py  test_list_incident_members.py  test_list_incident_teams.py  test_list_incidents.py  test_list_public_incidents.py  test_list_public_occurrences.py  test_list_repo_occurrences.py  test_list_sources.py  test_list_users.py  test_read_custom_tags.py
(+65 files in other folders)
