[project]
name = "gg-api-mcp-server"
version = "0.1.0"
description = "MCP server for GitGuardian"
authors = [
    {name = "Author", email = "author@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[project.scripts]
gg-mcp-server = "gg_api_mcp_server.server:mcp.run"
gg-mcp = "gg_api_mcp_server.server:mcp.run"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.ruff]

line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E741", "F402", "F823", "W293"]


[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio" # mark a test as an asynchronous test
]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
gpg_sign = true
version_files = [
    "pyproject.toml:version",
]
