[project]
name = "ggmcp"
version = "0.5.0"
description = "MCP server for GitGuardian"
authors = [
    { name = "GitGuardian", email = "support@gitguardian.com" },
]
maintainers = [
    { name = "GitGuardian", email = "support@gitguardian.com" },
]
keywords = [
    "cli",
    "devsecops",
    "security-tools",
    "gitguardian",
    "mcp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "developer-mcp-server",
    "secops-mcp-server"
]

[project.urls]
Homepage = "https://github.com/GitGuardian/ggmcp"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
developer-mcp-server = "developer_mcp_server.server:run_mcp_server"
# secops-mcp-server = "secops_mcp_server.server:mcp.run"


[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
"gg-api-core" = { workspace = true }
"developer-mcp-server" = { workspace = true }
"secops-mcp-server" = { workspace = true }

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E741", "F402", "F823", "W293"]


[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio" # mark a test as an asynchronous test
]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
gpg_sign = true
version_files = [
    "pyproject.toml:version",
]
